fix text size and button in header on mobile view

--- a/OrchardSkills.OrchardCore.LandingPageTheme/wwwroot/css/styles.css
+++ b/OrchardSkills.OrchardCore.LandingPageTheme/wwwroot/css/styles.css
@@ -507,3 +507,8 @@ input:checked + .slider:before {
 .rgba-black-light::after {
   background-color: rgba(0, 0, 0, 0.3);
 }
+@media (max-width: 361px) {
+  .btn-lg {
+  padding: 0px 10px 0px !important;
+}
+}
